Add Java 9 profiles. Use special arguments for surefire.