@@ -22,6 +22,27 @@
 
   <profiles>
     <profile>
+      <id>jdk19-ge</id>
+      <activation>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <fork>true</fork>
+              <compilerArgs>
+                <arg>-J--add-modules</arg>
+                <arg>-Jjava.xml.ws.annotation</arg>
+              </compilerArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>jdk18</id>
       <activation>
         <jdk>1.8</jdk>
